
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8 ;
typedef int RD_POINT ;
typedef int BRUSH ;



void
ui_polygon(uint8 opcode, uint8 fillmode, RD_POINT * point, int npoints,
           BRUSH * brush, int bgcolour, int fgcolour)
{

}
